# learn_gstreamer

./: Dockerfile  README.md  caco.out  player  player_corrigido.out  webrtc_loopback
.devcontainer/: devcontainer.json  docker-compose.yml
carregar_video/src/: main.cpp
signaling_peers/src/: receiver.cpp  sender.cpp  signaling.py
singnaling_peers/: CMakeLists.txt
singnaling_peers/src/: receiver.cpp  sender.cpp  signaling.py
webrtcbin/: CMakeLists.txt
webrtcbin/src/: receiver.cpp  sender.cpp  webrtc_loopback.cpp
